# szs_soundzone_protocol

./: .gitignore  CMakeLists.txt  README.md  readme.markdown
docs/: class_s_z_p__master-members.html  class_s_z_p__master.html  class_s_z_p__slave.html  classdebug__write__file.html  classsound__zone__protocol-members.html  classx01__send__sound__packet-members.html  classx_f1__check__connection-members.html  dir_7c8d6c1e39164e58cc538107275656b1.html  dir_7e17ac9cf8fba2cb04bc248c85b0ceb7.html  files.html  hierarchy.html  index.html  md__c___users_ncpd__documents__git_hub_szs_soundzone_protocol__r_e_a_d_m_e.html  pages.html  sound__zone__protocol_8h_source.html  szp__master_8h_source.html
docs/html/: annotated.html  class_s_z_p__slave-members.html  classbuffer__t-members.html  classbuffer__t.html  classdebug__write__file-members.html  classes.html  classsound__zone__protocol.html  classx01__send__sound__packet.html  classx_f1__check__connection.html  debug__methods_8h_source.html  dir_e5777375d46da131d0d2ba564655bc13.html  dir_f396504afdc959660871b003fa10164d.html  functions.html  functions_func.html  menudata.js  szp__custom__types_8h_source.html  szp__slave_8h_source.html  x01__send__sound__packet_8h_source.html  x_f1__check__connection_8h_source.html
docs/html/search/: all_1.js  all_2.js  all_a.js  classes_3.js  functions_5.js  functions_7.js  functions_8.js  functions_9.js  functions_c.js  searchdata.js
docs/latex/: annotated.tex  class_s_z_p__master.eps  class_s_z_p__master.tex  class_s_z_p__slave.eps  class_s_z_p__slave.tex  classbuffer__t.tex  classdebug__write__file.tex  classsound__zone__protocol.eps  classsound__zone__protocol.tex  classx01__send__sound__packet.tex  classx_f1__check__connection.tex  debug__methods_8h_source.tex  files.tex  hierarchy.tex  md__c___users_ncpd__documents__git_hub_szs_soundzone_protocol__r_e_a_d_m_e.tex  refman.aux  refman.idx  refman.ilg  refman.ind  refman.tex  refman.toc  sound__zone__protocol_8h_source.tex  szp__custom__types_8h_source.tex  szp__master_8h_source.tex  szp__slave_8h_source.tex  x01__send__sound__packet_8h_source.tex  x_f1__check__connection_8h_source.tex
docs/search/: all_0.js  all_3.js  all_4.js  all_9.js  all_b.js  classes_0.js  classes_1.js  classes_2.js  functions_1.js  functions_3.js  functions_6.js  functions_b.js  pages_0.js
include/: debug_methods.h  sound_zone_protocol.h  szp_custom_types.h  szp_master.h  szp_slave.h  x01_send_sound_packet.h  xF1_check_connection.h
soundzones_appl/: readme.md
soundzones_appl/modules/soundzone_client/: __init__.py  readme.md  soundzone_client.py
soundzones_appl/modules/soundzone_protocol/: __init__.py  readme.md  soundzone_protocol.py
soundzones_appl/modules/soundzone_server/: __init__.py  readme.md  soundzone_server.py
soundzones_appl/tests/: test_appl.py
src/: debug_methods.cpp  sound_zone_protocol.cpp  szp_custom_types.cpp  szp_master.cpp  szp_slave.cpp  x01_send_sound_packet.cpp  xF1_check_connection.cpp
tests/: CMakeLists.txt
tests/test_client_szp/: CMakeLists.txt  test_client_szp.cpp
tests/test_master_szp/: CMakeLists.txt  test_master_szp.cpp
tests/test_szp_meas_report/: CMakeLists.txt  README.md  master_main.cpp  slave_main.cpp
tests/test_szp_raw/: CMakeLists.txt  test_szp_raw.cpp
